log_bridge_3.txt
warning: unused import: `serialport::SerialPort`
  --> positronic-io\src\lib.rs:10:5
   |
10 | use serialport::SerialPort; // Requires 'serialport' crate
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variants `Disconnect` and `Stop` are never constructed
  --> positronic-io\src\lib.rs:42:5
   |
40 | enum IOCommand {
   |      --------- variants in this enum
41 |     Connect(SerialConfig),
42 |     Disconnect(String),
   |     ^^^^^^^^^^
43 |     Scan,
44 |     Stop,
   |     ^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `active_ports` is never read
  --> positronic-io\src\lib.rs:50:5
   |
48 | pub struct HardwareMonitor {
   |            --------------- field in this struct
49 |     /// Active ports are tracked by name for UI status
50 |     active_ports: Arc<Mutex<Vec<String>>>,
   |     ^^^^^^^^^^^^

warning: `positronic-io` (lib) generated 3 warnings
warning: field `watcher` is never read
 --> positronic-core\src\watcher.rs:7:5
  |
6 | pub struct FileSystemWatcher {
  |            ----------------- field in this struct
7 |     watcher: RecommendedWatcher,
  |     ^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `positronic-core` (lib) generated 1 warning
    Checking positronic-bridge v0.1.0 (C:\Dev\Projects\Rust\Positronic\positronic-bridge)
error[E0277]: `PositronicEngine` doesn't implement `Debug`
    --> positronic-bridge\src\main.rs:39:17
     |
  36 | #[derive(Clone, Debug)]
     |                 ----- in this derive macro expansion
...
  39 |     EngineReady(Arc<PositronicEngine>, Arc<Mutex<mpsc::Receiver<()>>>),
     |                 ^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `PositronicEngine`
     |
help: the trait `Debug` is implemented for `std::sync::Arc<T, A>`
    --> C:\Users\DrTom\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\sync.rs:3700:1
     |
3700 | impl<T: ?Sized + fmt::Debug, A: Allocator> fmt::Debug for Arc<T, A> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `positronic-bridge` (bin "positronic-bridge") due to 1 previous error
